load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "check.go",
        "command.go",
        "main.go",
        "pkgmans.go",
        "rulegraph.go",
        "rules.go",
    ],
    importpath = "github.com/jaeyeom/experimental/devtools/setup-dev/go",
    visibility = ["//visibility:private"],
    deps = ["@com_github_jaeyeom_sugo//errors/must:go_default_library"],
)

go_binary(
    name = "go",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "check_test.go",
        "command_test.go",
        "pkgmans_test.go",
    ],
    embed = [":go_default_library"],
)
