load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["linkfix.go"],
    importpath = "github.com/jaeyeom/experimental/text/markdown/linkfix",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["linkfix_test.go"],
    embed = [":go_default_library"],
)
