load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "split",
    srcs = ["split.go"],
    importpath = "github.com/jaeyeom/experimental/text/markdown/split",
    visibility = ["//visibility:public"],
)

go_test(
    name = "split_test",
    size = "small",
    srcs = ["split_test.go"],
    embed = [":split"],
)
