load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["split.go"],
    importpath = "github.com/jaeyeom/experimental/text/markdown/split",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["split_test.go"],
    embed = [":go_default_library"],
)
